--- a/templates/radio.html
+++ b/templates/radio.html
@@ -8,12 +8,9 @@
   placeholder="Name"
   required
   />
-  <select name="sport">
-    <option disabled selected>Sport</option>
     {% for sport in sports %}
-      <option value = {{sport}}>{{sport}}</option>
+      <input name = "sport" type="radio" value = {{sport}}>{{sport}}</input>
     {% endfor %}
-  </select>
   <button type="submit">Register</button>
 </form>
 
