--- a/templates/deregister.html
+++ b/templates/deregister.html
@@ -1,26 +1,26 @@
 {% extends "layout.html"%} {% block body %}
-
+<h1>Registrants</h1>
 <table>
     <thead>
         <tr>
             <th>Name</th>
             <th>Sport</th>
-            <th>
-                #
-            </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
+        {% for registrant in registrants %}
         <tr>
-            <td>David</td>
-            <td>Soccer</td>
+            <td>{{ registrant.name }}</td>
+            <td>{{ registrant.sport }}</td>
             <td>
                 <form action="/deregister" method="post">
-                    <input name="id" type="hidden" value="1">
+                    <input name="id" type="hidden" value="{{ registrant.id }}">
                     <input type="submit" value="Deregister">
                 </form>
             </td>
         </tr>
+        {% endfor %}
         <tr></tr>
 
     </tbody>
