--- a/templates/registrants.html
+++ b/templates/registrants.html
@@ -1,8 +1,8 @@
 {% extends "layout.html"%} {% block body %}
 
 <ul>
-  {% for name in registrants %}
-  <li>{{name}} is registered for {{ registrants[name] }}</li>
+  {% for registrant in registrants %}
+  <li>{{registrant.name}} is registered for {{ registrant.sport }}</li>
   {% endfor %}
 </ul>
 
